package category.Bird;

/**
 * Represents a bird type.
 */
public enum BirdType {
    HAWK,
    EAGLE,
    OSPREY,
    KIWI,
    MOA,
    ROSE_RING_PARAKEET,
    GRAY_PARROT,
    SULFUR_CRESTED_COCKATOO,
    GREAT_AUK,
    HORNED_PUFFIN,
    AFRICAN_JACANA,
    DUCK,
    SWAN,
    EMUS, GEESE
}
