package category.Bird.Flightless;

import category.Bird.BirdType;
/**
 * Represents a moa, a flightless bird native to New Zealand.
 */
public class moa extends Flightless{
    /**
     * Creates a new moa bird.
     */
    public moa() {
        super(null, BirdType.MOA);
    }
}
