package category.Bird.ShoreBird;

import category.Bird.BirdType;
/**
 * Represents a great auk, a shore bird.
 */

public class GreatAuk extends Shorebird{
    /**
     * Creates a new great auk.
     */

    public GreatAuk() {
        super(null, BirdType.GREAT_AUK);
    }


}
