package category.Bird.ShoreBird;

import category.Bird.BirdType;

/**
 * Represents a horned puffin, a shore bird.
 */
public class HornedPuffin extends Shorebird{
    /**
     * Creates a new horned puffin.
     */
    public HornedPuffin() {
        super(null, BirdType.HORNED_PUFFIN);
    }


}
