package category.Bird.Waterfowl;

import category.Bird.BirdType;

/**
 * Represents a geese, a waterfowl.
 */
public class Geese extends Waterfowl{
    /**
     * Creates a new geese.
     */
    public Geese() {
        super(null, BirdType.GEESE);
    }
}
