package category.Bird.Waterfowl;

import category.Bird.BirdType;

public class Swan extends Waterfowl{

    public Swan() {
        super(null, BirdType.SWAN);
    }
}
