package category.Food;

/**
 * Represents types of food that birds may eat.
 */
public enum Food {
    /** Berries that birds may eat. */
    BERRIES,
    /** Seeds that birds may eat. */
    SEEDS,
    /** Fruit that birds may eat. */
    FRUIT,
    /** Insects that birds may eat. */
    INSECTS,
    /** Other birds that predatory birds may eat. */
    OTHER_BIRDS,
    /** Eggs that predatory birds may eat. */
    EGGS,
    /** Small mammals that predatory birds may eat. */
    SMALL_MAMMALS,
    /** Fish that birds may eat. */
    FISH,
    /** Buds that birds may eat. */
    BUDS,
    /** Larvae that birds may eat. */
    LARVAE,
    /** Aquatic invertebrates that birds may eat. */
    AQUATIC_INVERTEBRATES,
    /** Nuts that birds may eat. */
    NUTS,
    /** Vegetation that birds may eat. */
    VEGETATION
}